--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <div class="sidebar">
         <nav>
           <ul>
-            <li>Home</li>
-            <li>CV</li>
-            <li>My Intro</li>
-            <li>Services</li>
-            <li>Blog</li>
+            <li><a href="contact">Home</a></li>
+            <li><a href="cv.html">CV</a></li>
+            <li><a href="intro.html">My Intro</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="blog.html">Blog</a></li>
           </ul>
         </nav>
       </div>
@@ -26,7 +26,7 @@
             <h1 class="hello">Hello I am </h1>
           <div class="name">Amjadoddin Sarwari</div>
           <div class="about">Developer, Entrepuner, </div>
-          <div class="button">
+          <div class="buttons">
             <button>Download CV</button>
             <button>Contact Me</button>
           </div>
