some feat was add

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
           <div class="name">Amjadoddin Sarwari</div>
           <div class="about">Developer, Entrepuner, </div>
           <div class="buttons">
-            <button>Download CV</button>
-            <button>Contact Me</button>
+            <a  href="./resume/Amjad Resume.pdf" target="_blank">
+            <button>Download CV</button></a>
+           <a href="./contact.html"> <button>Contact Me</button></a>
           </div>
           </div>
           <div class="devpic" ><img src="./image/amjad.png" alt="Amjadoddin Sarwari"></div>
