--- a/blog.html
+++ b/blog.html
@@ -1,40 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amjadoddin Sarwari- Web Developer, Programmer,</title>
-    <link rel="stylesheet" href="mypf.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="sidebar">
-        <nav>
-          <ul>
-            <li><a href="contact">Home</a></li>
-            <li><a href="cv.html">CV</a></li>
-            <li><a href="intro.html">My Intro</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="blog.html">Blog</a></li>
-          </ul>
-        </nav>
-      </div>
-      <div class="main">
-        <div class="infocontainer">
-          <div class="devinfo">
-            <h1 class="hello">Hello I am </h1>
-          <div class="name">Amjadoddin Sarwari</div>
-          <div class="about">Developer, Entrepuner, </div>
-          <div class="buttons">
-            <button>Download CV</button>
-            <button>Contact Me</button>
-          </div>
-          </div>
-          <div class="devpic" ><img src="./image/amjad.png" alt="Amjadoddin Sarwari"></div>
-        </div>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Amjadoddin Sarwari- Web Developer, Programmer,</title>
+  <link rel="stylesheet" href="mypf.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="sidebar">
+      <nav>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+
+          <li><a href="intro.html">My Intro</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact Me</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="main">
+      <div class="blogcontainer">
+        <h1>Blog By Amjadoddin Sarwari - The Legend.
+        </h1>
+        <block class="blogitem">
+          <h2>Learn JavaScript - In Fun Way</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore nam sit dolorem quas laudantium corrupti
+            mollitia eos doloremque provident. Nostrum eos itaque ipsam unde nam ex veniam, aspernatur dolorum sapiente!
+          </p>
+          <button class="btn btn-sm">Read More</button>
+        </block>
+        <block class="blogitem">
+          <h2>Learn JavaScript - In Fun Way</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore nam sit dolorem quas laudantium corrupti
+            mollitia eos doloremque provident. Nostrum eos itaque ipsam unde nam ex veniam, aspernatur dolorum sapiente!
+          </p>
+          <button class="btn btn-sm">Read More</button>
+        </block>
+        <block class="blogitem">
+          <h2>Learn JavaScript - In Fun Way</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore nam sit dolorem quas laudantium corrupti
+            mollitia eos doloremque provident. Nostrum eos itaque ipsam unde nam ex veniam, aspernatur dolorum sapiente!
+          </p>
+          <button class="btn btn-sm">Read More</button>
+        </block>
+        <block class="blogitem">
+          <h2>Learn JavaScript - In Fun Way</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore nam sit dolorem quas laudantium corrupti
+            mollitia eos doloremque provident. Nostrum eos itaque ipsam unde nam ex veniam, aspernatur dolorum sapiente!
+          </p>
+          <button class="btn btn-sm">Read More</button>
+        </block>
       </div>
     </div>
-  </body>
+  </div>
+  </div>
+</body>
+
 </html>
