--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1 class="hello">Hello I am </h1>
           <div class="name">Amjadoddin Sarwari</div>
           <div class="about">Developer, Entrepuner, </div>
-          <div class="buttons">
+          <div class="btn">
             <a href="./image/Amjad Resume (1).pdf">
             <button class="btn">Download CV</button></a>
             <a href="./contact.html">
