--- a/services.html
+++ b/services.html
@@ -12,11 +12,12 @@
       <div class="sidebar">
         <nav>
           <ul>
-            <li><a href="contact">Home</a></li>
-            <li><a href="cv.html">CV</a></li>
+            <li><a href="home.html">Home</a></li>
+            
             <li><a href="intro.html">My Intro</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
       </div>
@@ -26,9 +27,11 @@
             <h1 class="hello">Hello I am </h1>
           <div class="name">Amjadoddin Sarwari</div>
           <div class="about">Developer, Entrepuner, </div>
-          <div class="buttons">
-            <button>Download CV</button>
-            <button>Contact Me</button>
+          <div class="btn">
+            <a href="./image/Amjad Resume (1).pdf">
+            <button class="btn">Download CV</button></a>
+            <a href="./contact.html">
+            <button class="btn">Contact Me</button></a>
           </div>
           </div>
           <div class="devpic" ><img src="./image/amjad.png" alt="Amjadoddin Sarwari"></div>
