--- a/intro.html
+++ b/intro.html
@@ -24,15 +24,9 @@
       <div class="main">
         <div class="infocontainer">
           <div class="devinfo">
-            <h1 class="hello">Hello I am </h1>
-          <div class="name">Amjadoddin Sarwari</div>
-          <div class="about">Developer, Entrepuner, </div>
-          <div class="btn">
-            <a href="./image/Amjad Resume (1).pdf">
-            <button class="btn">Download CV</button></a>
-            <a href="./contact.html">
-            <button class="btn">Contact Me</button></a>
-          </div>
+            <h1>About Me</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit earum magni quis facilis soluta repudiandae nemo tempore laborum repellendus maxime voluptatem animi harum dolorum laboriosam eius minima eligendi, consectetur sint molestias perspiciatis dolore facere praesentium. Fugit, ducimus.</p>
+         
           </div>
           <div class="devpic" ><img src="./image/amjad.png" alt="Amjadoddin Sarwari"></div>
         </div>
