media tag was add

--- a/intro.html
+++ b/intro.html
@@ -13,7 +13,6 @@
         <nav>
           <ul>
             <li><a href="home.html">Home</a></li>
-            
             <li><a href="intro.html">My Intro</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="blog.html">Blog</a></li>
@@ -22,20 +21,21 @@
         </nav>
       </div>
       <div class="main">
-        <div class="infocontainer">
-          <div class="devinfo">
-            <h1 class="hello">Hello I am </h1>
-          <div class="name">Amjadoddin Sarwari</div>
-          <div class="about">Developer, Entrepuner, </div>
-          <div class="btn">
-            <a href="./image/Amjad Resume (1).pdf">
-            <button class="btn">Download CV</button></a>
-            <a href="./contact.html">
-            <button class="btn">Contact Me</button></a>
-          </div>
-          </div>
-          <div class="devpic" ><img src="./image/amjad.png" alt="Amjadoddin Sarwari"></div>
-        </div>
+        <div class="intro">
+        <h2>About Me</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+          praesentium dicta autem voluptatibus vero modi, aliquid, sapiente
+          officiis maxime, delectus commodi optio aut molestiae voluptate ab
+          adipisci! Excepturi deleniti magni, reiciendis nulla iusto eveniet
+          distinctio molestias necessitatibus.
+        </p>
+        <h2>My Skills</h2>
+        <div class="skillcontainer"></div>
+        <div class="skillitem">CSS: <div class="skill"> </div></div>
+        <div class="skillitem">JavaScript: <div class="skill"></div></div>
+        <div class="skillitem">React.JS: <div class="skill"></div></div>
+        <div class="skillitem">Github: <div class="skill"></div></div>
       </div>
       </div>
     </div>
