--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,11 @@
       <div class="sidebar">
         <nav>
           <ul>
-            <li><a href="contact">Home</a></li>
-            <li><a href="cv.html">CV</a></li>
+            <li><a href="home.html">Home</a></li>           
             <li><a href="intro.html">My Intro</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
       </div>
