some feature was add

--- a/intro.html
+++ b/intro.html
@@ -32,10 +32,11 @@
         </p>
         <h2>My Skills</h2>
         <div class="skillcontainer"></div>
-        <div class="skillitem">CSS: <div class="skill"> </div></div>
-        <div class="skillitem">JavaScript: <div class="skill"></div></div>
-        <div class="skillitem">React.JS: <div class="skill"></div></div>
-        <div class="skillitem">Github: <div class="skill"></div></div>
+        <div class="skillitem">HTML: <div class="skill hundered"> </div></div>
+        <div class="skillitem">CSS: <div class="skill hundered"> </div></div>
+        <div class="skillitem">JavaScript: <div class="skill hundered"></div></div>
+        <div class="skillitem">React.JS: <div class="skill fifty"></div></div>
+        <div class="skillitem">Github: <div class="skill fifty"></div></div>
       </div>
       </div>
     </div>
