--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="sidebar">
+      <div class="sidebar sidebarGo">
         <nav>
           <ul>
             <li><a href="home.html">Home</a></li>
@@ -22,6 +22,10 @@
         </nav>
       </div>
       <div class="main">
+        <div class="hamburger">
+          <img class="ham"src="image/hamburger-menu-icon.jpg" alt="" width="23">
+          <img class="cross"src="image/cross.png" alt="" width="23">
+        </div>
         <div class="infocontainer">
           <div class="devinfo">
             <h1 class="hello">Hello I am </h1>
@@ -39,5 +43,8 @@
       </div>
       </div>
     </div>
+    <script src="index.js">
+
+    </script>
   </body>
 </html>
