--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container">
-    <div class="sidebar">
+    <div class="sidebar sidebarGo">
       <nav>
         <ul>
           <li><a href="home.html">Home</a></li>
@@ -23,6 +23,10 @@
       </nav>
     </div>
     <div class="main">
+      <div class="hamburger">
+        <img class="ham"src="image/hamburger-menu-icon.jpg" alt="" width="23">
+        <img class="cross"src="image/cross.png" alt="" width="23">
+      </div>
       <div class="blogcontainer">
         <h1>Blog By Amjadoddin Sarwari - The Legend.
         </h1>
@@ -58,6 +62,7 @@
     </div>
   </div>
   </div>
+  <script src="index.js"></script>
 </body>
 
 </html>
