--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="sidebar">
+      <div class="sidebar sidebarGo">
         <nav>
           <ul>
             <li><a href="home.html">Home</a></li>           
@@ -21,6 +21,10 @@
         </nav>
       </div>
       <div class="main">
+        <div class="hamburger">
+          <img class="ham"src="image/hamburger-menu-icon.jpg" alt="" width="23">
+          <img class="cross"src="image/cross.png" alt="" width="23">
+        </div>
         <div class="contactform">
             <h1>Contact Me For Work/General Enquiries</h1>
             <form>
@@ -51,5 +55,6 @@
       </div>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
