--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="devinfo">
             <h1 class="hello">Hello I am </h1>
           <div class="name">Amjadoddin Sarwari</div>
-          <div class="about">Developer, Entrepuner, </div>
+          <div class="about">Developer, Entrepreneur, </div>
           <div class="btn">
             <a href="./image/Amjad Resume (1).pdf">
             <button class="btn">Download CV</button></a>
