--- a/intro.html
+++ b/intro.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="sidebar">
+      <div class="sidebar sidebarGo">
         <nav>
           <ul>
             <li><a href="home.html">Home</a></li>
@@ -21,6 +21,10 @@
         </nav>
       </div>
       <div class="main">
+        <div class="hamburger">
+          <img class="ham"src="image/hamburger-menu-icon.jpg" alt="" width="23">
+          <img class="cross"src="image/cross.png" alt="" width="23">
+        </div>
         <div class="intro">
         <h2>About Me</h2>
         <p>
@@ -40,5 +44,7 @@
       </div>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
+
 </html>
