--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <button class="btn">Contact Me</button></a>
           </div>
           </div>
-          <div class="devpic" ><img src="./image/amjad.png" alt="Amjadoddin Sarwari"></div>
+          <div class="devpic" ><img src="./image/my.png" alt="Amjadoddin Sarwari"></div>
         </div>
       </div>
       </div>
