--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
           <div class="devinfo">
             <h1 class="hello">Hello I am </h1>
           <div class="name">Amjadoddin Sarwari</div>
-          <div class="about">Developer, Entrepuner, </div>
+          <div class="about">Developer, Entrepreneur, </div>
           <div class="btn">
             <a href="./image/Amjad Resume (1).pdf">
             <button class="btn">Download CV</button></a>
@@ -37,7 +37,7 @@
             <button class="btn">Contact Me</button></a>
           </div>
           </div>
-          <div class="devpic" ><img src="./image/amjad.png" alt="Amjadoddin Sarwari"></div>
+          <div class="devpic" ><img src="./image/my.png" alt="Amjadoddin Sarwari"></div>
         </div>
       </div>
       </div>
